# django_scaffolding_tools

./: .gitignore  Makefile  makefile  mkdocs.yml  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
django_scaffolding_tools/: __init__.py  builders.py  cli.py  enums.py  parsers.py  patterns.py  serializers.py.j2  writers.py
django_scaffolding_tools/_experimental/backup_envs/: backups.py  gdrive.py  google_drive.py
django_scaffolding_tools/_experimental/click_demo/: print_single_line.py
django_scaffolding_tools/_experimental/cover_letters/: config.py  generators.py
django_scaffolding_tools/django/: builders.py  handlers.py  list.html.j2  main.py  parsers.py  utils.py  writers.py
django_scaffolding_tools/pydantic/: main.py  schemas.py
django_scaffolding_tools/templates/: drf_model_serializers.py.j2
django_scaffolding_tools/utils/: assert_utils.py  core.py
docs/: index.md
docs/_old_sphinx/: conf.py
example/: testing.py
example/example/: settings.py  settings_container.py  urls.py  wsgi.py
example/people/: models.py
example/servers/: apps.py  models.py
example/servers/api/: serializers.py
tests/: conftest.py  settings.py  test_app_config.py  test_django_scaffolding_tools.py  test_parsers.py  test_writer.py
tests/django/: test_django_builders.py  test_django_writers.py  test_handlers.py
tests/fixtures/: api_bulk.json  finance_models.py  models.py  models_with_helptext.py  pydantic_models.py  simple_models.py  simple_models2.py
tests/utils/: test_assert_utils.py
(+29 files in other folders)
