[tool.poetry]
name = "django-scaffolding-tools"
version = "0.10.5"
description = "Tools to quickly scaffold django apps and templates."
authors = ["Luis C. Berrocal <luis.berrocal.1942@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyhumps = "^3.8.0"
pydantic = "^2.10.5"
click = "^8.1.8"
jinja2 = "^3.1.5"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
ruff = "^0.9.1"
pytest-cov = "^6.0.0"
bump2version = "^1.0.1"
tox = "^4.23.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
